--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 
         <h1 class="header--main">Discovery hidden places in the world around you</h1>
         <p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
-        <video autoplay loop> 
+        <video autoplay controls> 
             <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
-    
+        <h2 class="header--secondary">Your personal travel guide</h2>
+        <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+            <p><img src="resources/images/camp.jpg"></p>
+            <p><img class="phone--icon" src="resources/images/phone.png"></p>
+                <h2 class="header--footer">Coming Soon for iPhone and Android</h2>
+        <p><a class="footer--link" href="#">Download Excursion (Coming soon!)</a></p>
     </body>    
 </html>
