--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h1 class="header--main">Discovery hidden places in the world around you</h1>
         <p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
-        <video autoplay controls> 
+        <video controls loop> 
             <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
         <h2 class="header--secondary">Your personal travel guide</h2>
@@ -21,5 +21,6 @@
             <p><img class="phone--icon" src="resources/images/phone.png"></p>
                 <h2 class="header--footer">Coming Soon for iPhone and Android</h2>
         <p><a class="footer--link" href="#">Download Excursion (Coming soon!)</a></p>
+        <p class="footer--copyright">© Excursion</p>
     </body>    
 </html>
