--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h1 class="header--main">Discovery hidden places in the world around you</h1>
         <p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
-        <video controls loop> 
+        <video autoplay muted controls loop> 
             <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
         <h2 class="header--secondary">Your personal travel guide</h2>
