--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
         <video autoplay muted controls loop> 
             <source src="resources/videos/excursion.mp4" type="video/mp4">
+            Sorry, your browser doesn't support this video.
         </video>
         <h2 class="header--secondary">Your personal travel guide</h2>
         <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
